# simple_budget_app

./: Cargo.toml  README.md
src/: main.rs  template_variables.rs
static/css/: index.css  index.css.map
static/scss/: index.scss
templates/: 404.html  base.html  index.html
