[package]
name = "budget"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
askama = "0.12.1"
askama_actix = "0.14.0"
log = "0.4.21"
mongodb = "2.8.2"
rstest = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
simplelog = "0.12.2"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
